[project]
name = "serial-radio-tools"
version = "1.0.0"
description = "Python tools for controlling a Contiki-NG serial radio node"
authors = [
    { name = "Joakim Eriksson", email = "joakim.eriksson@ri.se" }
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "pyserial>=3.5",
    "cbor2>=5.4",
    "websockets>=12.0",
]

[project.scripts]
serial-radio = "tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.pypi-dependencies]
serial-radio-tools = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.10"

[tool.pixi.tasks]
cli = { cmd = "python -m tools.cli", description = "Run the serial radio CLI" }
list-ports = { cmd = "python -c \"from tools import list_serial_ports; print('\\n'.join(list_serial_ports()))\"", description = "List available serial ports" }
webserver = { cmd = "python -c \"from tools.webserver import SerialRadioWebServer; s = SerialRadioWebServer(); s.start(); import time; time.sleep(3600)\"", description = "Run standalone web server (for testing)" }
