[project]
name = "serial-radio-tools"
version = "1.0.0"
description = "Python tools for controlling a Contiki-NG serial radio node"
authors = [
    { name = "Joakim Eriksson", email = "joakim.eriksson@ri.se" }
]
requires-python = ">= 3.10"
dependencies = [
    "pyserial>=3.5",
    "cbor2>=5.4",
    "websockets>=12.0",
]

[project.scripts]
serial-radio = "tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
